Fix deprecated URL constructor, update AGENTS.md